force-app/main/default/objects/MappingDetail__mdt/MappingDetail__mdt.object-meta.xml
<CustomObject>
    <label>Mapping Detail</label>
    <pluralLabel>Mapping Details</pluralLabel>
</CustomObject>