force-app/main/default/objects/MappingDetail__mdt/fields/MappingConfiguration__c.field-meta.xml
<CustomField>
    <fullName>MappingConfiguration__c</fullName>
    <label>Mapping Configuration</label>
    <referenceTo>MappingConfiguration__mdt</referenceTo>
    <relationshipLabel>Mapping Details</relationshipLabel>
    <relationshipName>Mapping_Details</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>