force-app/main/default/objects/MappingDetail__mdt/fields/SmartCompanyDataField__c.field-meta.xml
<CustomField>
    <fullName>SmartCompanyDataField__c</fullName>
    <label>SmartCompanyData Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>identifier</fullName>
                <default>true</default>
                <label>identifier</label>
            </value>
            <value>
                <fullName>branchIdentifier</fullName>
            </value>
            <value>
                <fullName>rsin</fullName>
            </value>
            <value>
                <fullName>name</fullName>
            </value>
            <value>
                <fullName>isBranch</fullName>
            </value>
            <value>
                <fullName>isMainBranch</fullName>
            </value>
            <value>
                <fullName>legalForm</fullName>
            </value>
            <value>
                <fullName>deregistrationDate</fullName>
            </value>
            <value>
                <fullName>city</fullName>
            </value>
            <value>
                <fullName>street</fullName>
            </value>
            <value>
                <fullName>houseNumber</fullName>
            </value>
            <value>
                <fullName>houseNumberAddition</fullName>
            </value>
            <value>
                <fullName>postalCode</fullName>
            </value>
            <value>
                <fullName>country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>