force-app/main/default/objects/MappingDetail__mdt/fields/SortOrderBy__c.field-meta.xml
<CustomField>
    <fullName>SortOrderBy__c</fullName>
    <label>Sort Order By</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>